# hexapod

./: hexapod.docx
SSC-32 Bootloader/: bootldr168.hex  bootldr168.txt
Simulation/Environment/: CMakeLists.txt  Camera.cpp  Camera.h  ComReciever.cpp  ComReciever.h  CommandLine.cpp  CommandLine.h  FPSCounter.cpp  FPSCounter.h  Lidar.cpp  Lidar.h  Pod.cpp  Pod.h  Point2D.cpp  Point2D.h  Point3D.cpp  Point3D.h  Segment2D.cpp  Segment2D.h  Utils.cpp  Utils.h  VirtualRoom.cpp  VirtualRoom.h  config.txt  main.cpp
Simulation/Environment/FirmwareCode/: AbstractBehavior.cpp  Config.cpp  Config.h  Hexapod.cpp  Hexapod.h  Joint.cpp  Joint.h  Limb.cpp  Limb.h  Serial.cpp  Serial.h
Simulation/Hexapod/: AbstractBehavior.h  Behavior.h  CMakeLists.txt  CatBehavior.cpp  CatBehavior.h  Config.cpp  Hexapod.cpp  Hexapod.h  Joint.cpp  Joint.h  LidarAPI.cpp  LidarAPI.h  LidarBehavior.cpp  LidarBehavior.h  Limb.cpp  Limb.h  Serial.cpp  Serial.h  SquareTestBehavior.cpp  SquareTestBehavior.h  main.cpp  utils.cpp  utils.h
SpiderCat/: SpiderCat.cbp  SpiderCat.depend  SpiderCat.layout  main.cpp  spider.nb
